monitoring/configs/routing/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  parentRefs:
    - name: luzero-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "grafana.luzero.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-https
  namespace: monitoring
spec:
  parentRefs:
    - name: luzero-gateway
      namespace: istio-system
      sectionName: https
  hostnames:
    - "grafana.luzero.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
